--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       label: Prerequisites
       options:
-        - label: I have searched [existing issues](https://github.com/barrettruth/fugitive-ts.nvim/issues)
+        - label: I have searched [existing issues](https://github.com/barrettruth/diffs.nvim/issues)
           required: true
 
   - type: textarea
