--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Questions
-    url: https://github.com/barrettruth/fugitive-ts.nvim/discussions
+    url: https://github.com/barrettruth/diffs.nvim/discussions
     about: Ask questions and discuss ideas
