--- a/.prettierrc
+++ b/.prettierrc
@@ -5,13 +5,5 @@
   "useTabs": false,
   "trailingComma": "none",
   "semi": false,
-  "singleQuote": true,
-  "overrides": [
-    {
-      "files": ["**/*.md"],
-      "options": {
-        "parser": "markdown"
-      }
-    }
-  ]
+  "singleQuote": true
 }
