fix: remove useless ci script

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,10 +21,8 @@ jobs:
         with:
           nvim_version: ${{ matrix.nvim }}
           before: |
-            git clone --depth 1 https://github.com/the-mikedavis/tree-sitter-diff /tmp/tree-sitter-diff
-            cd /tmp/tree-sitter-diff && cc -shared -fPIC -o diff.so -I./src src/parser.c
-            PARSER_DIR=$(nvim --headless -c 'lua print(vim.fn.stdpath("data") .. "/site/parser")' -c 'q' 2>&1 | tail -1)
-            echo "Installing parser to: $PARSER_DIR"
-            mkdir -p "$PARSER_DIR"
-            cp diff.so "$PARSER_DIR/"
-            nvim --headless -c 'lua print("diff parser available:", pcall(vim.treesitter.language.inspect, "diff"))' -c 'q'
+            git clone --depth 1 https://github.com/the-mikedavis/tree-sitter-diff /tmp/ts-diff
+            cd /tmp/ts-diff && cc -shared -fPIC -o diff.so -I./src src/parser.c
+            mkdir -p ~/.local/share/nvim/site/parser ~/.local/share/nvim/site/queries/diff
+            cp diff.so ~/.local/share/nvim/site/parser/
+            cp queries/*.scm ~/.local/share/nvim/site/queries/diff/
